==> changxian-gu/kiteshield/lib_depend_src/crypto/hardware/msp432e4/msp432e4_crypto_hash.c <==
#define TRACE_LEVEL CRYPTO_TRACE_LEVEL
#include <stdint.h>
#include "msp432.h"
#include "inc/hw_shamd5.h"
#include "driverlib/types.h"
#include "core/crypto.h"
#include "hardware/msp432e4/msp432e4_crypto.h"
#include "hardware/msp432e4/msp432e4_crypto_hash.h"
#include "hash/hash_algorithms.h"
#include "debug.h"

error_t sha1Compute(const void *data, size_t length, uint8_t *digest)
{
   //Acquire exclusive access to the SHA/MD5 module
   osAcquireMutex(&msp432e4CryptoMutex);

   //Reset the SHA/MD5 module before use
   hashReset();

   //Configure the SHA/MD5 module
   SHAMD5->MODE = SHAMD5_MODE_ALGO_SHA1 | SHAMD5_MODE_ALGO_CONSTANT |
      SHAMD5_MODE_CLOSE_HASH;

   //Digest the message
   hashProcessData(data, length, digest, SHA1_DIGEST_SIZE);

   //Release exclusive access to the SHA/MD5 module
   osReleaseMutex(&msp432e4CryptoMutex);

   //Sucessful processing
   return NO_ERROR;
}

void sha1Init(Sha1Context *context)
{
   //Set initial hash value
   context->h[0] = BETOH32(0x67452301);
   context->h[1] = BETOH32(0xEFCDAB89);
   context->h[2] = BETOH32(0x98BADCFE);
   context->h[3] = BETOH32(0x10325476);
   context->h[4] = BETOH32(0xC3D2E1F0);

   //Number of bytes in the buffer
   context->size = 0;
   //Total length of the message
   context->totalSize = 0;
}

void sha1Update(Sha1Context *context, const void *data, size_t length)
{
   size_t n;

   //Acquire exclusive access to the SHA/MD5 module
   osAcquireMutex(&msp432e4CryptoMutex);

   //Reset the SHA/MD5 module before use
   hashReset();

   //Configure the SHA/MD5 module
   SHAMD5->MODE = SHAMD5_MODE_ALGO_SHA1;

   //Restore hash context
   SHAMD5->IDIGEST_A = context->h[0];
   SHAMD5->IDIGEST_B = context->h[1];
   SHAMD5->IDIGEST_C = context->h[2];
   SHAMD5->IDIGEST_D = context->h[3];
   SHAMD5->IDIGEST_E = context->h[4];

   //Restore the value of the SHA_DIGEST_COUNT register
   SHAMD5->DIGEST_COUNT = context->totalSize;

   //Process the incoming data
   while(length > 0)
   {
      //Check whether some data is pending in the buffer
      if(context->size == 0 && length >= 64)
      {
         //The length must be a multiple of 64 bytes
         n = length - (length % 64);

         //Update hash value
         hashProcessData(data, n, context->digest, SHA1_DIGEST_SIZE);

         //Advance the data pointer
         data = (uint8_t *) data + n;
         //Remaining bytes to process
         length -= n;
      }
      else
      {
         //The buffer can hold at most 64 bytes
         n = MIN(length, 64 - context->size);

         //Copy the data to the buffer
         osMemcpy(context->buffer + context->size, data, n);

         //Update the SHA-1 context
         context->size += n;
         //Advance the data pointer
         data = (uint8_t *) data + n;
         //Remaining bytes to process
         length -= n;

         //Check whether the buffer is full
         if(context->size == 64)
         {
            //Update hash value
            hashProcessData(context->buffer, context->size, context->digest,
               SHA1_DIGEST_SIZE);

            //Empty the buffer
            context->size = 0;
         }
      }
   }

   //Save the value of the SHA_DIGEST_COUNT register
   context->totalSize = SHAMD5->DIGEST_COUNT;

   //Release exclusive access to the SHA/MD5 module
   osReleaseMutex(&msp432e4CryptoMutex);
}

void sha1Final(Sha1Context *context, uint8_t *digest)
{
   //Acquire exclusive access to the SHA/MD5 module
   osAcquireMutex(&msp432e4CryptoMutex);

   //Reset the SHA/MD5 module before use
   hashReset();

   //Configure the SHA/MD5 module
   SHAMD5->MODE = SHAMD5_MODE_ALGO_SHA1 | SHAMD5_MODE_CLOSE_HASH;

   //Restore hash context
   SHAMD5->IDIGEST_A = context->h[0];
   SHAMD5->IDIGEST_B = context->h[1];
   SHAMD5->IDIGEST_C = context->h[2];
   SHAMD5->IDIGEST_D = context->h[3];
   SHAMD5->IDIGEST_E = context->h[4];

   //Restore the value of the SHA_DIGEST_COUNT register
   SHAMD5->DIGEST_COUNT = context->totalSize;

   //Finish digest calculation
   hashProcessData(context->buffer, context->size, context->digest,
      SHA1_DIGEST_SIZE);

   //Release exclusive access to the SHA/MD5 module
   osReleaseMutex(&msp432e4CryptoMutex);

   //Copy the resulting digest
   if(digest != NULL)
   {
      osMemcpy(digest, context->digest, SHA1_DIGEST_SIZE);
   }
}

error_t sha256Compute(const void *data, size_t length, uint8_t *digest)
{
   //Acquire exclusive access to the SHA/MD5 module
   osAcquireMutex(&msp432e4CryptoMutex);

   //Reset the SHA/MD5 module before use
   hashReset();

   //Configure the SHA/MD5 module
   SHAMD5->MODE = SHAMD5_MODE_ALGO_SHA256 | SHAMD5_MODE_ALGO_CONSTANT |
      SHAMD5_MODE_CLOSE_HASH;

   //Digest the message
   hashProcessData(data, length, digest, SHA256_DIGEST_SIZE);

   //Release exclusive access to the SHA/MD5 module
   osReleaseMutex(&msp432e4CryptoMutex);

   //Sucessful processing
   return NO_ERROR;
}

void sha256Init(Sha256Context *context)
{
   //Set initial hash value
   context->h[0] = BETOH32(0x6A09E667);
   context->h[1] = BETOH32(0xBB67AE85);
   context->h[2] = BETOH32(0x3C6EF372);
   context->h[3] = BETOH32(0xA54FF53A);
   context->h[4] = BETOH32(0x510E527F);
   context->h[5] = BETOH32(0x9B05688C);
   context->h[6] = BETOH32(0x1F83D9AB);
   context->h[7] = BETOH32(0x5BE0CD19);

   //Number of bytes in the buffer
   context->size = 0;
   //Total length of the message
   context->totalSize = 0;
}

void sha256Update(Sha256Context *context, const void *data, size_t length)
{
   size_t n;

   //Acquire exclusive access to the SHA/MD5 module
   osAcquireMutex(&msp432e4CryptoMutex);

   //Reset the SHA/MD5 module before use
   hashReset();

   //Configure the SHA/MD5 module
   SHAMD5->MODE = SHAMD5_MODE_ALGO_SHA256;

   //Restore hash context
   SHAMD5->IDIGEST_A = context->h[0];
   SHAMD5->IDIGEST_B = context->h[1];
   SHAMD5->IDIGEST_C = context->h[2];
   SHAMD5->IDIGEST_D = context->h[3];
   SHAMD5->IDIGEST_E = context->h[4];
   SHAMD5->IDIGEST_F = context->h[5];
   SHAMD5->IDIGEST_G = context->h[6];
   SHAMD5->IDIGEST_H = context->h[7];

   //Restore the value of the SHA_DIGEST_COUNT register
   SHAMD5->DIGEST_COUNT = context->totalSize;

   //Process the incoming data
   while(length > 0)
   {
      //Check whether some data is pending in the buffer
      if(context->size == 0 && length >= 64)
      {
         //The length must be a multiple of 64 bytes
         n = length - (length % 64);

         //Update hash value
         hashProcessData(data, n, context->digest, SHA256_DIGEST_SIZE);

         //Advance the data pointer
         data = (uint8_t *) data + n;
         //Remaining bytes to process
         length -= n;
      }
      else
      {
         //The buffer can hold at most 64 bytes
         n = MIN(length, 64 - context->size);

         //Copy the data to the buffer
         osMemcpy(context->buffer + context->size, data, n);

         //Update the SHA-256 context
         context->size += n;
         //Advance the data pointer
         data = (uint8_t *) data + n;
         //Remaining bytes to process
         length -= n;

         //Check whether the buffer is full
         if(context->size == 64)
         {
            //Update hash value
            hashProcessData(context->buffer, context->size, context->digest,
               SHA256_DIGEST_SIZE);

            //Empty the buffer
            context->size = 0;
         }
      }
   }

   //Save the value of the SHA_DIGEST_COUNT register
   context->totalSize = SHAMD5->DIGEST_COUNT;

   //Release exclusive access to the SHA/MD5 module
   osReleaseMutex(&msp432e4CryptoMutex);
}

void sha256Final(Sha256Context *context, uint8_t *digest)
{
   //Acquire exclusive access to the SHA/MD5 module
   osAcquireMutex(&msp432e4CryptoMutex);

   //Reset the SHA/MD5 module before use
   hashReset();

   //Configure the SHA/MD5 module
   SHAMD5->MODE = SHAMD5_MODE_ALGO_SHA256 | SHAMD5_MODE_CLOSE_HASH;

   //Restore hash context
   SHAMD5->IDIGEST_A = context->h[0];
   SHAMD5->IDIGEST_B = context->h[1];
   SHAMD5->IDIGEST_C = context->h[2];
   SHAMD5->IDIGEST_D = context->h[3];
   SHAMD5->IDIGEST_E = context->h[4];
   SHAMD5->IDIGEST_F = context->h[5];
   SHAMD5->IDIGEST_G = context->h[6];
   SHAMD5->IDIGEST_H = context->h[7];

   //Restore the value of the SHA_DIGEST_COUNT register
   SHAMD5->DIGEST_COUNT = context->totalSize;

   //Finish digest calculation
   hashProcessData(context->buffer, context->size, context->digest,
      SHA256_DIGEST_SIZE);

   //Release exclusive access to the SHA/MD5 module
   osReleaseMutex(&msp432e4CryptoMutex);

   //Copy the resulting digest
   if(digest != NULL)
   {
      osMemcpy(digest, context->digest, SHA256_DIGEST_SIZE);
   }
}
